--- a/templates/form.html
+++ b/templates/form.html
@@ -16,7 +16,7 @@
         <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
         <div class="input-group mb-3">
           <label class="input-group-text" for="files">Upload</label>
-          <input type="file" class="form-control" id="files" name="files">
+          <input type="file" class="form-control" id="files" name="files" multiple>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
         <p class="mt-5 mb-3 text-muted">© 2021-2022</p>
