--- a/templates/form.html
+++ b/templates/form.html
@@ -41,8 +41,13 @@
             $("#uploadForm").hide();
             var link = `<a href="${response.link}">Download PDF</a>`
             var error = `<p>${response.error}</p>`
-            $("#response").html(link)
-            $("#response").html(error)
+            if (response.error) {
+              $("#response").html(error)
+            } else {
+              $("#response").html(link)
+            }
+            
+            
           },
           error: function(xhr) {
             console.log('error')
